--- a/finished-app/src/components/AirportInfo.css
+++ b/finished-app/src/components/AirportInfo.css
@@ -1,11 +1,11 @@
 .airportinfo {
-    width: 80%;
-    margin: 0 auto; 
-    padding: 20px; 
-    border: 1px dotted black; 
-    height: 80vh; 
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px dotted black;
+    height: 80vh;
     overflow-y: auto;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
@@ -20,7 +20,7 @@ form {
     background-color: #008140;
     padding: 20px 20px;
     height: 10px;
-    color: white; 
+    color: white;
     border-radius: 12px;
     display: block;
     line-height: 0px;
@@ -31,9 +31,8 @@ label {
     font-size: 20px;
 }
 
-
 #queryInput {
-    box-shadow: 0 0 15px 4px rgba(0,0,0,0.06);
+    box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
     padding: 10px;
     margin: 10px;
