--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
   text-align: center;
+  align-items: center;
+  background-color: rgb(122, 122, 122);
+}
+
+.table {
+  width: 70%;
+  padding-top: 30px;
+  border-radius: 10px;
 }
